--- a/app/src/main/res/layout/content_detail_football.xml
+++ b/app/src/main/res/layout/content_detail_football.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".detail.DetailTourismActivity"
+    tools:context=".detail.DetailFootballActivity"
     android:layout_marginTop="16dp"
     tools:showIn="@layout/activity_detail_football">
 
     <TextView
-        android:id="@+id/tv_detail_description"
+        android:id="@+id/detail_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:text="@string/text_subtitle" />
+        android:text="@string/subtitle_txt" />
 
 </androidx.core.widget.NestedScrollView>
